# stock-analysis

./: .gitignore  README.md  docker-compose.yml  main.py  playground.ipynb  pyproject.toml
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: test-source-code-parsing.yml
analysis/: utils.py
analysis/api/: base_api.py  company_api.py  data_api.py  screener_api.py
analysis/charts/: company_charts.py
analysis/data/: company_data.py
analysis/data/templates/: profile.py
analysis/frontend/: screener.py  watchlist.py
analysis/frontend/company_overview/: actions.py  index.py  right_pane.py
analysis/models/: company.py  statement.py
analysis/persistence/: data_store.py
