[tool.poetry]
name = "stock-analysis"
version = "0.1.0"
description = ""
authors = ["Andrew Walker <andrew@ajunwalker.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
jupyter = "^1.1.1"

[tool.poetry.group.dev.dependencies]
mypy = "1.11.2"
ruff = "0.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

